transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      revisionHistoryLimit: 1
      volumes:
        - name: gluetun-role-config
          configMap:
            name: gluetun-role-config
        - name: downloads
          persistentVolumeClaim:
            claimName: transmission-downloads-pvc
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.0.6-r2-ls281
          volumeMounts:
            - mountPath: /downloads
              name: downloads
              subPath: downloads
            - mountPath: /watch
              name: downloads
              subPath: downloads/watch
            - mountPath: /config
              name: config
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "curl -c /config/mam.cookies -b /config/mam.cookies https://t.myanonamouse.net/json/dynamicSeedbox.php"]
              initialDelaySeconds: 15
              periodSeconds: 15
